--- a/grafana/values.yaml
+++ b/grafana/values.yaml
@@ -513,12 +513,12 @@ datasources:
    datasources:
    - name: Prometheus
      type: prometheus
-     url: http://prometheus-server
+     url: http://monitoring-kube-prometheus-prometheus:9090
      access: proxy
      isDefault: true
    - name: loki
      type: loki
-     url: http://loki
+     url: http://loki:3100
      access: proxy
      isDefault: true
 #    - name: CloudWatch
