--- a/grafana/values.yaml
+++ b/grafana/values.yaml
@@ -516,11 +516,11 @@ datasources:
      url: http://monitoring-kube-prometheus-prometheus:9090
      access: proxy
      isDefault: true
-   - name: loki
-     type: loki
-     url: http://loki:3100
-     access: proxy
-     isDefault: true
+  #  - name: loki
+  #    type: loki
+  #    url: http://loki:3100
+  #    access: proxy
+  #    isDefault: true
 #    - name: CloudWatch
 #      type: cloudwatch
 #      access: proxy
