--- a/apps/kube-state.yaml
+++ b/apps/kube-state.yaml
@@ -2,7 +2,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: prometheus
+  name: kube-state-metrics
   namespace:  argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
