--- a/apps/certmngr.yaml
+++ b/apps/certmngr.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: certMngr
+  name: certmngr
   namespace:  argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
