--- a/apps/certmngr.yaml
+++ b/apps/certmngr.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: certmngr
+  name: certmanager
   namespace:  argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
@@ -14,6 +14,6 @@ spec:
     server: 'https://kubernetes.default.svc'
   project: default
   source:
-    path: jaggertracing/
+    path: certmanager/
     repoURL: https://github.com/kunal2791/cldcvr.git
     targetRevision: main
